--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,7 @@ li {
   /*border: 1px solid red;*/
 }
 
-.listContainer {
+.itemListContainer {
   /*border: 2px solid blue;*/
   max-width: fit-content;
 }
